maybe fixed navbar z-index

--- a/mystyle.css
+++ b/mystyle.css
@@ -62,6 +62,7 @@ nav {
     min-height: 6vh;
     background-color: #333;
     position: relative;
+    z-index: +1;
 }
 
 .logo {
